Fix button width on mobile layout

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -605,7 +605,7 @@ background-color: #69a2d2;
 
   .header-button-homepage {
     font-size: 2.3em;
-    width: 5.7em;
+    width: 5.3em;
     margin-top: 35%;
   }
 
